# LApprox

./: .readthedoc.yaml  .readthedocs.yaml  Example_Multivariate_Gaussian.ipynb  README.md  pyproject.toml
.ipynb_checkpoints/: Example_RV_Likelihood-checkpoint.ipynb
Files/: Kepler21_rv.csv
docs/: requirements.txt
docs/source/: LApprox.rst  Likelihood_Functions.rst  conf.py  index.rst
src/: LApprox.py  Likelihood_Functions.py
